Created a simple cube to indicate where the player is going to build
Moving the mouse over the ground will give an indication of where the
player can build

--- a/ass1/ass1/ass1.csproj
+++ b/ass1/ass1/ass1.csproj
@@ -45,6 +45,7 @@
     <Compile Include="ModelManager.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="selectionCube.cs" />
   </ItemGroup>
   <ItemGroup>
     <Reference Include="MonoGame.Framework">
