--- a/ass1/ass1/ass1.csproj
+++ b/ass1/ass1/ass1.csproj
@@ -46,6 +46,8 @@
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="selectionCube.cs" />
+    <Compile Include="Turret.cs" />
+    <Compile Include="WorldModelManager.cs" />
   </ItemGroup>
   <ItemGroup>
     <Reference Include="MonoGame.Framework">
