--- a/ass1/ass1/ass1.csproj
+++ b/ass1/ass1/ass1.csproj
@@ -43,6 +43,7 @@
     <Compile Include="Game1.cs" />
     <Compile Include="Ground.cs" />
     <Compile Include="ModelManager.cs" />
+    <Compile Include="Player.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="selectionCube.cs" />
@@ -62,6 +63,7 @@
   <ItemGroup>
     <MonoGameContentReference Include="Content\Content.mgcb" />
   </ItemGroup>
+  <ItemGroup />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <Import Project="$(MSBuildExtensionsPath)\MonoGame\v3.0\MonoGame.Content.Builder.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
