Added some basic AI for enemies moving towards tower
The enemy will randomly spawn and head towards the tower
All of the models being used for the tower and enemy are just the same
model as the selection cube for the moment

--- a/ass1/ass1/ass1.csproj
+++ b/ass1/ass1/ass1.csproj
@@ -39,7 +39,9 @@
   </PropertyGroup>
   <ItemGroup>
     <Compile Include="BasicModel.cs" />
+    <Compile Include="Behavior.cs" />
     <Compile Include="Camera.cs" />
+    <Compile Include="Enemy.cs" />
     <Compile Include="Tower.cs" />
     <Compile Include="Game1.cs" />
     <Compile Include="Ground.cs" />
