--- a/ass1/ass1/ass1.csproj
+++ b/ass1/ass1/ass1.csproj
@@ -40,6 +40,7 @@
   <ItemGroup>
     <Compile Include="BasicModel.cs" />
     <Compile Include="Behavior.cs" />
+    <Compile Include="Bullet.cs" />
     <Compile Include="Camera.cs" />
     <Compile Include="Enemy.cs" />
     <Compile Include="Tower.cs" />
