--- a/ass1/ass1/ass1.csproj
+++ b/ass1/ass1/ass1.csproj
@@ -40,6 +40,7 @@
   <ItemGroup>
     <Compile Include="BasicModel.cs" />
     <Compile Include="Behavior.cs" />
+    <Compile Include="Building.cs" />
     <Compile Include="Bullet.cs" />
     <Compile Include="Camera.cs" />
     <Compile Include="Enemy.cs" />
@@ -52,6 +53,7 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="selectionCube.cs" />
     <Compile Include="Turret.cs" />
+    <Compile Include="Wall.cs" />
     <Compile Include="WorldModelManager.cs" />
   </ItemGroup>
   <ItemGroup>
